# deepseek-ai-synth-node

./: .gitignore  CLAUDE.md  DESIGN.md  NEURAL_ARCHITECTURE_SURVEY.md  REVIEW.md  pyproject.toml  requirements.txt
.planning/todos/pending/: 2026-05-11-multi-timbre-training-data.md
configs/: phase1.yaml  phase5.yaml
scripts/: eval.py  generate_data.py  generate_multitimbral_data.py  infer.py  phase2_interactive.py  phase2_render_demos.py  phase3_interactive.py  phase3_render_demos.py  phase5_eval.py  phase5_train.py  phase6_interactive.py  phase9_render_demos.py  preprocess.py  train.py
synth/: __init__.py  competition.py  feedback.py  poly.py  voice.py
synth/data/: dataset.py  preprocessing.py
synth/dsp/: __init__.py  fm.py  formant.py  harmonic.py  noise.py  processors.py  transient.py
synth/energy/: __init__.py  biases.py
synth/eval/: latency.py  metrics.py
synth/nn/: __init__.py  decoder.py  hypernetwork.py  model.py  modulated_decoder.py  transformer_decoder.py
synth/train/: losses.py  trainer.py
tests/: test_decoder.py  test_harmonic.py  test_model.py  test_noise.py
