[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ai-synth-node"
version = "0.1.0"
description = "AI Synthesizer Node with DDSP + Hypernetwork architecture"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
